# backend-way

./: .gitignore  README.md
django-way/: README.md
django-way/django-for-beginners/: README.md
fastAPI-way/: README.md
fastAPI-way/1_helloWorld/app/: main.py
fastAPI-way/fastapi_and_celery/part1/chapter1/: main.py  pyproject.toml
fastAPI-way/fastapi_and_celery/part1/chapter3/: docker-compose.yml  pyproject.toml
fastAPI-way/fastapi_and_celery/part1/chapter3/project/: __init__.py
fastAPI-way/fastapi_and_celery/part1/chapter8/: README.md  pyproject.toml
fastAPI-way/fastapi_and_celery/part1/chapter8/project/: __init__.py
fastAPI-way/fastapi_and_celery/part1/chapter8/project/users/: tasks.py  views.py
fastAPI-way/fastapi_and_celery/part1/chapter8/project/ws/: views.py
fastAPI-way/fastapi_and_celery/part2/chapter2/: README.md  pyproject.toml
fastAPI-way/fastapi_and_celery/part2/chapter2/compose/local/fastapi/celery/worker/: start
fastAPI-way/fastapi_and_celery/part2/chapter2/project/: config.py
fastAPI-way/fastapi_and_celery/part2/chapter2/project/users/: factories.py  tasks.py  views.py
fastAPI-way/fastapi_and_celery/part2/chapter2/project/ws/: views.py
fastAPI-way/fastapi_and_celery/part2/chapter2/tests/: conftest.py
fastAPI-way/fastapi_and_celery/part2/chapter2/tests/users/: test_tasks.py  test_views.py
fastAPI-way/fastapi_celery_guide/: pyproject.toml
fastAPI-way/fastapi_celery_guide/compose/local/fastapi/: Dockerfile
fastAPI-way/fastapi_celery_guide/project/: __init__.py  config.py
fastAPI-way/fastapi_docker_container_hot_reload/: README.md  docker-compose.yaml  hot_reload_dockerfile.Dockerfile  pyproject.toml  requirements.txt  start-reload.sh
fastAPI-way/fastapi_docker_container_hot_reload/src/: main.py
fastAPI-way/fastapi_rabbitmq_between/: docker-compose.yml
fastAPI-way/fastapi_rabbitmq_between/service_1/: asgi.py  pyproject.toml
fastAPI-way/fastapi_rabbitmq_between/service_1/api/api_v1/: api.py
fastAPI-way/fastapi_rabbitmq_between/service_1/api/api_v1/endpoints/: tasks.py
fastAPI-way/fastapi_rabbitmq_between/service_1/core/: __init__.py  app_factory.py  config.py
fastAPI-way/fastapi_react/backend/: pyproject.toml
fastAPI-way/fastapi_react/backend/app/: api.py
fastAPI-way/fastapi_react/frontend/: package-lock.json
fastAPI-way/fastapi_sse/: main.py  pyproject.toml
fastAPI-way/intermediate_recipe_book/: example.db  pyproject.toml
fastAPI-way/intermediate_recipe_book/alembic/: env.py
fastAPI-way/intermediate_recipe_book/app/: backend_pre_start.py  initial_data.py  main.py
fastAPI-way/recipe_book/: pyproject.toml
fastAPI-way/recipe_book/app/: main.py  schemas.py
fastAPI-way/restapi_recipebook_with_react/backend/: example.db
fastAPI-way/restapi_recipebook_with_react/frontend/: package-lock.json
frontend-way/: README.md
frontend-way/html_css/: README.md
frontend-way/html_css/advanced-positioning/: menu.css  menu.html  shemes.html  styles.css
frontend-way/html_css/basic-web-pages/: basics.html
frontend-way/html_css/css-box-model/: box-styles.css  boxes.html
frontend-way/html_css/css-selectors/: selectors.html  styles.css
frontend-way/html_css/flexbox/: flexbox.html  styles.css
frontend-way/html_css/floats/: floats.html  styles.css
frontend-way/html_css/forms/: speaker-submission.html  styles.css
frontend-way/html_css/hello-css/: dummy.html  hello-css.html  styles.css
frontend-way/html_css/links-and-images/: images.html  links.html
frontend-way/html_css/responsive-design/: responsive.html  styles.css
frontend-way/html_css/responsive-images/: responsive.html  styles.css
frontend-way/html_css/semantic-html/: article.html
frontend-way/html_css/web-typography/: alignment.html  history.html  typo.css  web-fonts.html
frontend-way/intro_to_react/: package-lock.json  package.json
frontend-way/intro_to_react/src/: index.js
notes-way/: README.md
notes-way/docker/: deploy web app tutorial.md  docker beginner tutorial.md  docker images and dockerfile tutorial.md
notes-way/dsa/: Asymptotic notations.md  DSA introduction.md  Divide and Conquer algorithm.md
notes-way/dsa/algorithms/: Divide and Conquer algorithm.md
notes-way/dsa/data_structures/: Hash table.md  Linked List and its types.md  Stack, Queue and types of queue.md
notes-way/internet/: Browsers and how they work.md  DNS and how it works.md  How browsers work.md  How does the internet work (advance).md  How does the internet work.md  What is HTTP.md  What is URL.md  What is domain name.md
notes-way/python/: := in Python 3.8.md
python-way/: README.md
python-way/algorithms/: Dockerfile
python-way/algorithms/sorts/: insertionsort.py  mergesort.py  quicksort.py
python-way/data_structures/: stack.py
python-way/data_structures/binary_tree/: AVL_treee.py  BST.py  binary_tree.py
python-way/data_structures/graph/: graph.py  graph_adj_list.py  graph_adj_matrix.py
python-way/data_structures/hashtable/: hashtable_my.py
python-way/data_structures/heap/: heap.py  (+1 more)
sql-way/: README.md
sql-way/postgreSQL_book/: Chapter1.sql  Chapter10.sql  Chapter4.sql  Chapter5.sql  Chapter6.sql  Chapter7.sql  Chapter8.sql  Chapter9_1st_console.sql  Chapter9_2nd_console.sql  Chapter9_2nd_console;.sql
(+249 files in other folders)
