[tool.poetry]
name = "fastapi-docker-container-hot-reload"
version = "0.1.0"
description = ""
authors = ["Vitaly Kopylov <workflow.elec@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_docker_container_hot_reload"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
