[tool.poetry]
name = "service_1"
version = "0.1.0"
description = ""
authors = ["Hanabiraa <workflow.elec@gmail.com>"]
packages = [{ include = "service_1" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92"
pydantic = "^1.10"
uvicorn = { extras = ["standard"], version = "^0.20.0" }
gunicorn = "^20.1.0"
pika = "=1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"