[tool.poetry]
name = "chapter1"
version = "0.1.0"
description = ""
authors = ["Hanabiraa <workflow.elec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
celery = "^5.2.7"
redis = "^4.4.2"
flower = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
