[tool.poetry]
name = "chapter2"
version = "0.1.0"
description = ""
authors = ["Hanabiraa <workflow.elec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
celery = "^5.2.7"
redis = "^4.4.2"
flower = "^1.2.0"
sqlalchemy = "^2.0.0"
alembic = "^1.9.2"
sqlalchemy-stubs = "^0.4"
psycopg2-binary = "^2.9.5"
watchfiles = "^0.18.0"
jinja2 = "^3.1.2"
requests = "^2.28.2"
asgiref = "^3.6.0"
asyncio-redis = "^0.16.0"
broadcaster = "^0.2.0"
aioredis = "^2.0.1"
python-socketio = "^5.7.2"
pytest = "^7.2.1"
httpx = "^0.23.3"
factory-boy = "^3.2.1"
pytest-factoryboy = "^2.5.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
